--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ php:
 
 before_script:
     - php bin/vendors install
+    - cp app/config/parameters.yml.dist app/config/parameters.yml
 
 script: phpunit --colors --coverage-text
