--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,3 +5,7 @@ login_check:
     pattern:   /login_check
 logout:
     pattern:   /logout
+
+library:
+    resource: '@AcmeLibraryBundle/Resources/config/routing.yml'
+    prefix: /library
